    it isn't improperly sourced by Xfce.
  * Properly execute mythbuntu frontend from .desktop file.

  [ Michael Haas ]
  * Force LC_CTYPE as a temporary workaround for locale issues
    when writing out VNC. (LP: #149935) (LP: #150029)

  [ Colin Watson ]
  * Fix ubiquity-frontend-* and ubiquity-artwork-* virtual package name
    generation to handle ~ in versions.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 10 Oct 2007 13:07:24 -0500

ubiquity (1.6.8) gutsy; urgency=low

  * Fix non-x86 installation: initialise automatic_mode even if we aren't
    using grub-installer.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 Oct 2007 20:40:46 +0100

ubiquity (1.6.7) gutsy; urgency=low

  * Reset migration-assistant page state when returning to it.
    Temporary fix for (LP: #151126).
  * Automatic update of included source packages: migration-assistant
    0.5.4.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 15 Oct 2007 12:48:45 -0400

ubiquity (1.6.6) gutsy; urgency=low

  [ Evan Dandrea ]
  * Back out recent test for the user existing in the m-a debconf
    section.  It isn't necessary and it breaks the installer when m-a is
    used (LP: #151243).

  [ Colin Watson ]
  * Ignore IOError exceptions while fetching packages; they happen when the
    network is disconnected, and aren't important enough to result in scary
    error messages or even hangs (LP: #145012).
  * Remove apt_pkg.init() workaround for LP #131294, which had too many
    other ill effects. We're fixing this in apt-setup instead.
  * Automatic update of included source packages: apt-setup 1:0.21ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 10 Oct 2007 18:31:50 +0100

ubiquity (1.6.5) gutsy; urgency=low

  * Revert accidental copy and paste of migration-assistant specific
    code (LP: #151051).

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 09 Oct 2007 15:48:57 -0400

ubiquity (1.6.4) gutsy; urgency=low

  [ Evan Dandrea ]